--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,28 @@ html, body{
     font-family: 'Lora', serif;
     
 }
-
+/* .embed{
+    border: 1px solid red;
+    padding: 5px;
+    background: #444;
+    
+}
+.embed .fb-page{
+    margin-left: 30%;
+} */
+.intro{
+    height: 100%;
+    width: 100%;
+    /* border: 1px solid red; */
+    background: url(../images/images_3.png);
+    background-size: cover;
+    
+}
+/* #myVideo {
+    
+    min-width: 100%;
+    min-height: 100%;
+  } */
 h1,
 h2,
 h3,
@@ -239,6 +260,17 @@ header .menu-toggle{
     float: left;
     
 }
+.content .main-content.single{
+    background: white;
+    padding: 20px 50px;
+    font-size:1.1em ;
+    border-radius: 5px;
+}
+
+.content .main-content.single .post-title{
+    text-align: center;
+    margin-bottom: 40px;
+}
 
 .content .main-content .recent-post-title{
     margin: 20px;
@@ -251,6 +283,19 @@ header .menu-toggle{
     border-radius: 5px;
     background: white;
     position: relative;
+}
+
+.content .popular .post{
+    border-top: 1px solid #e0e0e0;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.content .popular .post img{
+    height: 60px;
+    width: 75px;
+    float: left;
+    margin-right: 10px;
 }
 
 .content .main-content .post .read-more{
@@ -274,8 +319,18 @@ header .menu-toggle{
     width: 30%;
     float: left;
     
-    height: 300px;
+    
 }
+
+.content .sidebar.single{
+    padding: 0px 10px;
+}
+
+.content .sidebar.single .fb-page{
+    padding: 5px;
+    width: 50px;
+}
+
 .content .sidebar .section{
     background: white;
     padding: 20px;
@@ -396,6 +451,8 @@ header .menu-toggle{
 }
 .footer .footer-content .contact-form .contact-btn{
     float: right;
+    font-size: 1.1em;
+    font-family: 'Lora',serif;
 }
 
 
@@ -406,6 +463,48 @@ header .menu-toggle{
 }
 
 /* Media Queries */
+@media only screen and (max-width: 934px){
+    /* .into{
+        width: 100%;
+    }
+    #myVideo {
+    
+        width: 90%;
+        height: auto;
+      } */
+   
+    .fb-page{
+        width: auto;
+        display: block;
+        position: absolute;
+    }
+    .content h2{
+        font-size: 1em;
+    }
+    .content .main-content{
+        width: 100%;
+        padding: 10px;  
+    }
+    .content .main-content .post{
+        width: 100%;
+        
+    }
+    .content .sidebar{
+        width: 100%;
+        padding: 10px;
+    }
+    .content .sidebar .section.search{
+        margin-top: 30px;
+    }
+    .footer{
+        height: auto;
+    }
+    .footer .footer-content{
+        height: auto;
+        flex-direction: column;
+    }
+}
+
 @media only screen and (max-width: 750px){
     header{
         position: relative;
@@ -452,5 +551,12 @@ header .menu-toggle{
         
         margin-left: 0.5em;
     }
+    .post-slider .next{
+        right: 10px;
+    }
+    .post-slider .prev{
+        left: 10px;
+    }
+    
     
 }
